code/tui/src/app/fullscreen/snapshots/app__fullscreen__modal__tests__provider_clicked_input.snap
---
source: code/tui/src/app/fullscreen/modal_tests.rs
expression: frame_text(&app)
---
  .                                                                            [— / —] [Dashboard]  
                                                                                                    
  ╭──────────────────────────────────────────────────────────────────────────────────────────────╮  
  │         ┌── Config › Custom provider ─────────────────────────────────────────[✗]─┐          │  
  │    ▄  ▄ │                                                                         │          │  
  │  ▗█▛██▜█│> Provider name                                                          │          │  
  │  ▝▜████▛│  ╭────────────────────────────────────────────────────────────────────╮ │          │  
  │    ▝  ▘ │  │ N                                                                  │ │          │  
  │         │  ╰────────────────────────────────────────────────────────────────────╯ │          │  
  │         │  Base URL                                                               │          │  
  │         │  ╭────────────────────────────────────────────────────────────────────╮ │          │  
  │         │  │ https://example.com/v1                                             │ │          │  
  │         │  ╰────────────────────────────────────────────────────────────────────╯ │          │  
  │         │  API key                                                                │          │  
  ╰─────────│  ╭────────────────────────────────────────────────────────────────────╮ │──────────╯  
            │  │ API key (optional)                                                 │ │             
            │  ╰────────────────────────────────────────────────────────────────────╯ │             
            │  Model ID                                                               │             
            │  ╭────────────────────────────────────────────────────────────────────╮ │             
            │  │ Leave empty to use the selected built-in model                     │ │             
            │  ╰────────────────────────────────────────────────────────────────────╯ │             
            │  API type                                              OpenAI Responses │             
            │  Model context window                                              272k │             
            │● Test                                                                   │             
            │                                                                         │ Esc return  
  ──────────│  Enter to save  ·  Esc to cancel                                        │───────────  
  > Build an└─────────────────────────────────────────────────────────────────────────┘             
  ─────────────────────────────────────────────────────────────────────────────── Automatic model
