code/tui/src/app/fullscreen/snapshots/app__fullscreen__modal__tests__provider_parent_restores_config.snap
---
source: code/tui/src/app/fullscreen/modal_tests.rs
expression: trimmed
---
  .                                                                                    [Dashboard]

  ╭──────────────────────────────────────────────────────────────────────────────────────────────╮
  │         ┌── Config ───────────────────────────────────────────────────────────[✗]─┐          │
  │    ▄  ▄ │                                                                         │          │
  │  ▗█▛██▜█│   General    Providers    Issues    Network                             │          │
  │  ▝▜████▛│                                                                         │          │
  │    ▝  ▘ │  ╭────────────────────────────────────────────────────────────────────╮ │          │
  │         │  │ Search configuration                                               │ │          │
  │         │  ╰────────────────────────────────────────────────────────────────────╯ │          │
  │         │  API ────────────────────────────────────────────────────────────────── │          │
  │         │> New custom provider                                                    │          │
  │         │                                                                         │          │
  │         │                                                                         │          │
  ╰─────────│                                                                         │──────────╯
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
  ──────────│  Enter/Space change · Tab tabs · / search · Esc close                   │───────────
  > Build an└─────────────────────────────────────────────────────────────────────────┘
  ─────────────────────────────────────────────────────────────────────────────── Automatic model
