code/tui/src/app/fullscreen/snapshots/app__fullscreen__modal__tests__standalone_new_branch_fullscreen.snap
---
source: code/tui/src/app/fullscreen/modal_tests.rs
expression: frame_text(&app)
---
  .                                                                            [— / —] [Dashboard]  
                                                                                                    
                                                                                                    
            ┌── New branch ───────────────────────────────────────────────────────[✗]─┐             
            │                                                                         │             
            │  Create branch                                                          │             
            │                                                                         │             
            │  ╭────────────────────────────────────────────────────────────────────╮ │             
            │  │ ash/topic                                                          │ │             
            │  ╰────────────────────────────────────────────────────────────────────╯ │             
            │  Create a branch at HEAD without switching worktrees.                   │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
  ╭─────────│  Enter to create  ·  Esc to close                                       │──────────╮  
  │ > Build └─────────────────────────────────────────────────────────────────────────┘          │  
  ╰──────────────────────────────────────────────────────────────────────────── Automatic model ─╯
