code/tui/src/app/fullscreen/snapshots/app__fullscreen__modal__tests__status_modal_processes.snap
---
source: code/tui/src/app/fullscreen/modal_tests.rs
expression: frame_text(&app)
---
  .                                                                            [— / —] [Dashboard]  
                                                                                                    
                                                                                                    
            ┌── Status ───────────────────────────────────────────────────────────[✗]─┐             
            │                                                                         │             
            │   Thread    Processes                                                   │             
            │                                                                         │             
            │  Total:              collecting                                         │             
            │  TUI:                collecting                                         │             
            │  App Server:         included in the TUI process                        │             
            │  Memory diagnostics: Disabled                                           │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
  ──────────│  Tab to switch · Esc to close                                           │───────────  
  > Build an└─────────────────────────────────────────────────────────────────────────┘             
  ─────────────────────────────────────────────────────────────────────────────── Automatic model
